# SimPiMIPS

./: .cproject  .project  Makefile.am  Makefile.in  README.md  app.cpp  app.h  config.h.in  configure  configure.ac  cpu.cpp  cpu.h  display_grid.cpp  display_grid.h  file_parser.cpp  file_parser.h  inst.txt  main.cpp  main_window.cpp  main_window.h  memory.cpp  memory.h  presenter.cpp  presenter.h  register.h  stage.cpp  stage.h  wxwin.m4
.deps/: app.Po  cpu.Po  display_grid.Po  file_parser.Po  main_window.Po  memory.Po  presenter.Po  register.Po  stage.Po
Default/: SimPiMIPS  app.d  cpu.d  display_grid.d  file_parser.d  input.txt  inst.txt  main_window.d  makefile  memory.d  presenter.d  register.d  stage.d  subdir.mk
samples/: output.txt
src/: Makefile  Makefile.am  Makefile.in
src/gui/: Makefile.am  Makefile.in  app.cpp  main_window.cpp  presenter.cpp  presenter.h
src/mips/: Makefile.am  Makefile.in  cpu.cpp  cpu.h  memory.cpp  memory.h  register.cpp  register.h  stage.cpp  stage.h
src/util/: Makefile.am  Makefile.in  file_parser.cpp  file_parser.h  typedefs.h
